# diffusion-policy-accelerated

./: .gitignore  README.md  pyproject.toml  setup.py
csrc/: conv1d_gnm_kernel.cu
diffusion_policy_accelerated/: __init__.py  config.py
diffusion_policy_accelerated/diffusion_policy/: model.py
tests/: test_conv1d_gnm.py
